# dlwltkd

./: .gitignore  HairInfo-Salon-Manager.desktop  README.md  launcher.py  pyproject.toml
.github/workflows/: build-macos-app.yml  build-windows-exe.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/ai/: __init__.py  agents.py  coordinator.py  oauth.py  routes.py
app/ui/: app.js  index.html  styles.css
scripts/: build_executable.sh  build_macos_app.sh  build_macos_dmg.sh  build_windows_exe.ps1  build_windows_exe.sh  transcribe_to_srt.py
tests/: test_ai_agents.py  test_api.py  test_transcribe_to_srt.py
