[project]
name = "hairinfo-salon-manager"
version = "0.2.0"
description = "HairInfo 기반 헤어샵 관리 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
packaging = [
  "pyinstaller>=6.10.0",
  "setuptools>=70.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
